fix large/wide tables cutting off

--- a/app/styles/print.scss
+++ b/app/styles/print.scss
@@ -4,12 +4,16 @@
     width: auto;
     height: auto;
     overflow: visible;
-    flex-direction: column-reverse; // avoid table collapsing with next element
   }
   .au-c-app {
     // overflow: visible;
     height: auto;
   }
+
+  .invisible-on-print {
+    visibility: hidden;
+  }
+
 
   // Hides the 'download bestand' button
   .au-c-link[download] {
@@ -56,6 +60,29 @@
   // Hide all hrefs
   a[href]:after {
     content: none !important;
+  }
+
+  .data-table{
+    display: flex !important;
+    flex-direction: column !important;
+  }
+
+  table{
+    // fix the input fields not showing the number inside the tables
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    /* Firefox */
+    input[type=number] {
+      -moz-appearance: textfield;
+    }
+
+    // Needed for wide tables (4+ columns)
+    word-break: break-all;
   }
 
   // Hides the headers and footers information
